--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -19,5 +19,16 @@
         background: url('../pages/images/map.png');
         background-size: cover;
     }
+    .input {
+        margin: 32px 0;
+        text-decoration: none;
+        background: #F1F1F1;
+        border-radius: 4px;
+        border: 1px solid #000000;
+        font-size: 14px;
+        padding: 8px 16px;
+        height: 40px;
+        width: 400px;
+    }
 }
 
