--- a/styles/Main.module.scss
+++ b/styles/Main.module.scss
@@ -30,5 +30,40 @@
         height: 40px;
         width: 400px;
     }
+
+    .filter{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        margin-bottom: 30px;  
+        &__item{
+            min-width: 120px;
+            padding: 15px 10px;
+            border: 1px solid #e4e4e4;
+            background-color: #f9f9f9;
+            transition: .5s ease;
+            transition-property: transform;
+            color: var(--c-icon-dark);
+        
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            cursor: pointer;
+            &--active,&:hover{
+              color: var(--c-text-light);
+              background-color: #ff7000;
+              border-radius: 4px;
+              transform: scale(1.1);
+              border-color: transparent;
+              box-shadow: 0 0 6px 0px rgba(0, 0, 0, 0.10);
+            }
+        }      
+        .filter__icon{
+          display: block;
+          font-size: 22px;
+          margin-bottom: 5px;
+          line-height: 22px;
+        }        
+    }
 }
 
