--- a/styles/AddCourseModal.module.scss
+++ b/styles/AddCourseModal.module.scss
@@ -1,3 +1,22 @@
+.addCourse__button__container {
+    bottom: 5%;
+    left: 28%;
+    position: fixed;
+    z-index:15;
+    .addCourse__button{
+        background-color: black;
+        font-size: 30px;
+        color:white;
+        width:40px;
+        height: 40px;
+        border-radius: 50%;
+        &:hover{
+            cursor: pointer;
+        }
+    }
+}
+
+
 .modal__container{
     width: 100%;
     height: 100vh;
